# advent-of-code

./: .env-template  .gitignore  .pre-commit-config.yaml  README.md  go.mod  make_next_day.py  my_output.txt  mypy.ini  pyproject.toml  pytest.ini
.github/: leaderboard.py  test_data.json  test_leaderboard.py
.github/workflows/: leaderboard.yml  leaderboard_personal.yml  leaderboard_work.yml
2022/: Cargo.toml  README.md
2022/day01/src/: main.rs
2022/src/: day02.rs  day03.rs  day05.rs  day06.rs  day07.py  day07.rs  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  lib.rs
2023/: cli.py
2023/day05/: solution.py  tests.py
2023/day06/: solution.py  tests.py
2023/day07/: solution.py  tests.py
2023/day08/: solution.py  tests.py
2023/day09/: solution.py  tests.py
2023/day10/: solution.py  tests.py
2023/day11/: solution.py  tests.py
2023/day12/: solution.py  tests.py
2023/day13/: solution.py  tests.py
2023/day14/: solution.py  tests.py
2023/day15/: solution.py  tests.py
2023/day16/: solution.py  tests.py
2023/day18/: solution.py  tests.py
2023/day21/: solution.py  tests.py
2023/day22/: solution.py  tests.py
2024/: day01.f90  input.txt
day02/: .part2.py.swp
day03/: .input.txt.swp  .part2.py.swp  part2.py
day04/: part2.py
day05/: part1.py
template/: .part1.py.swp  part1.py  solution.py  tests.py
y2015/day01/: solution.go  solution_test.go
y2015/day02/: solution.go  solution_test.go
y2015/day03/: solution.go  solution_test.go
y2015/day04/: solution.go  solution_test.go
y2015/day05/: solution.go  (+1 more)
(+119 files in other folders)
