[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Matt Kramer <mkramer@chevron.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pre-commit = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
