[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Matt Kramer <mkramer@chevron.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"

# Optional dependencies required for publishing leaderboard to Slack
requests = {version = "^2.26.0", optional = true }
python-dotenv = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.poetry.extras]
leaderboard = ["requests", "python-dotenv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
